--- a/index.html
+++ b/index.html
@@ -88,26 +88,26 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
   <!--radix_placeholder_meta_tags-->
-  <title>DiscomatiX: Welcome to DiscomatiX</title>
+  <title>DiscomatiX: Welcome to DiscoMatiX</title>
 
 
 
 
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="DiscomatiX: Welcome to DiscomatiX"/>
+  <meta property="og:title" content="DiscomatiX: Welcome to DiscoMatiX"/>
   <meta property="og:type" content="article"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:site_name" content="DiscomatiX"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="DiscomatiX: Welcome to DiscomatiX"/>
+  <meta property="twitter:title" content="DiscomatiX: Welcome to DiscoMatiX"/>
 
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","site"]}},"value":[{"type":"character","attributes":{},"value":["Welcome to DiscomatiX"]},{"type":"NULL"},{"type":"character","attributes":{},"value":["distill::distill_website"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","site"]}},"value":[{"type":"character","attributes":{},"value":["Welcome to DiscoMatiX"]},{"type":"NULL"},{"type":"character","attributes":{},"value":["distill::distill_website"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   <!--radix_placeholder_navigation_in_header-->
@@ -2091,7 +2091,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--radix_placeholder_front_matter-->
 
 <script id="distill-front-matter" type="text/json">
-{"title":"Welcome to DiscomatiX","authors":[]}
+{"title":"Welcome to DiscoMatiX","authors":[]}
 </script>
 
 <!--/radix_placeholder_front_matter-->
@@ -2114,7 +2114,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_site_before_body-->
 
 <div class="d-title">
-<h1>Welcome to DiscomatiX</h1>
+<h1>Welcome to DiscoMatiX</h1>
 <!--radix_placeholder_categories-->
 <!--/radix_placeholder_categories-->
 
