updated website text and added logo draft

--- a/team.html
+++ b/team.html
@@ -455,8 +455,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
 
   <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
-  <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet"/>
-  <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet"/>
   <script src="site_libs/headroom-0.9.4/headroom.min.js"></script>
   <script src="site_libs/autocomplete-0.37.1/autocomplete.min.js"></script>
   <script src="site_libs/fuse-6.4.1/fuse.min.js"></script>
@@ -2071,7 +2071,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="site_libs/header-attrs-2.19/header-attrs.js"></script>
+  <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
   <script src="site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
   <link href="site_libs/tippy-6.2.7/tippy-light-border.css" rel="stylesheet" />
@@ -2123,9 +2123,9 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 <div class="d-article">
 <p>Our interest group was founded in 2023 by Clare Patterson, Marian Marchal, and Vinicius Macuch Silva.</p>
-<p><strong>Clare XX</strong></p>
+<p><strong>Clare Patterson</strong></p>
 <p><strong>Marian Marchal</strong></p>
-<p>I am a PhD student at Saarland University in Vera Demberg’s lab. My work focuses on the role of relational and contextual cues in processing discourse relations, but I am interested in anything remotely related to this. In my research, I try to combine various methodologies: I conduct corpus research and psycholinguistic experiments, in which I use both on-line and off-line tasks.</p>
+<p>I’m a PhD student at Saarland University in Vera Demberg’s lab. My work focuses on the role of relational and contextual cues in processing discourse relations, but I am interested in anything remotely related to this. In my research, I often combine various psycholinguistic tasks (e.g. self-paced reading, comprehension) to test my hypotheses. These hypotheses are often inspired by corpus research and cognitive models of language processing.</p>
 <p><strong>Vinicius Macuch Silva</strong></p>
 <p>I’m a post-doctoral researcher working with Bodo Winter at the University of Birmingham.</p>
 <p>I’m interested in how people use language to create and manage meaning in communication, both when interacting with others and when producing and interpreting language in various other settings. In my research I use primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate issues related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.</p>
