--- a/meetings.html
+++ b/meetings.html
@@ -2126,12 +2126,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
 <h3 id="october-18">October 18</h3>
 <p><strong>Chris Cummins</strong>, <strong><em>University of Edinburgh</em></strong></p>
-<p><strong>Abstract</strong></p>
-<h3 id="november-15---tbd">November 15 - TBD</h3>
+<p><strong>Abstract</strong>
+Available soon.</p>
+<h3 id="november-15---tba">November 15 - TBA</h3>
 <h3 id="december-6">December 6</h3>
 <p><strong>Vera Demberg</strong>, <strong><em>Saarland University</em></strong></p>
 <p>Vera Demberg is a Professor of Computer Science and Computational Linguistics at Saarland University.
-She has been working discourse and pragmatics in both the SFB1102 ‘Information Density and Linguistic Encoding’ as well as the ERC-funded ‘Individualized Interaction in Discourse’.
+She has been working on discourse and pragmatics with her team in both the SFB1102 ‘Information Density and Linguistic Encoding’ as well as the ERC-funded ‘Individualized Interaction in Discourse’.
 In her research, she combines both experimental and computational approaches to discourse and pragmatics in order to develop cognitive models of human language understanding.</p>
 <p><strong>Abstract</strong>
 Available soon.</p>
