--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
   <!--radix_placeholder_meta_tags-->
-  <title>DiscomatiX: Welcome to DiscoMatiX</title>
+  <title>DiscoMatiX: Welcome to DiscoMatiX</title>
 
 
 
 
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="DiscomatiX: Welcome to DiscoMatiX"/>
+  <meta property="og:title" content="DiscoMatiX: Welcome to DiscoMatiX"/>
   <meta property="og:type" content="article"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:site_name" content="DiscomatiX"/>
+  <meta property="og:site_name" content="DiscoMatiX"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="DiscomatiX: Welcome to DiscoMatiX"/>
+  <meta property="twitter:title" content="DiscoMatiX: Welcome to DiscoMatiX"/>
 
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
@@ -455,8 +455,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
 
   <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
-  <link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet"/>
-  <link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet"/>
   <script src="site_libs/headroom-0.9.4/headroom.min.js"></script>
   <script src="site_libs/autocomplete-0.37.1/autocomplete.min.js"></script>
   <script src="site_libs/fuse-6.4.1/fuse.min.js"></script>
@@ -2071,7 +2071,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
+  <script src="site_libs/header-attrs-2.19/header-attrs.js"></script>
   <script src="site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
   <link href="site_libs/tippy-6.2.7/tippy-light-border.css" rel="stylesheet" />
@@ -2099,10 +2099,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <header class="header header--fixed" role="banner">
 <nav class="distill-site-nav distill-site-header">
 <div class="nav-left">
-<a href="index.html" class="title">DiscomatiX</a>
+<a class="logo">
+<img src="logo/DiscoMatiX_dark_transparent.png" alt="Logo"/>
+</a>
+<a href="index.html" class="title">DiscoMatiX</a>
 </div>
 <div class="nav-right">
-<a href="index.html">Home</a>
 <a href="meetings.html">Meetings</a>
 <a href="team.html">Team</a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
@@ -2123,7 +2125,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 <div class="d-article">
 <h3 id="who">Who?</h3>
-<p>We are a group of (early career) researchers working on <strong>Disc</strong>ourse and prag<strong>Mati</strong>cs using e<strong>X</strong>perimental approaches. Our group is specifically focused on the interface between theoretical and empirical approaches. Continue reading to learn more about what we mean by this.</p>
+<p>We are a group of (early career) researchers working on <strong>Disco</strong>urse and prag<strong>Mati</strong>cs using e<strong>X</strong>perimental approaches. Our group is specifically focused on the interface between theoretical and empirical approaches. Continue reading to learn more about what we mean by this.</p>
 <h3 id="what">What?</h3>
 <p>We bring together interested researchers in the fields of discourse and pragmatics to exchange ideas and experiences. Through these encounters, we aim to:</p>
 <ul>
