--- a/meetings.html
+++ b/meetings.html
@@ -88,20 +88,20 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
   <!--radix_placeholder_meta_tags-->
-  <title>DiscomatiX: Meetings</title>
+  <title>DiscoMatiX: Meetings</title>
 
 
 
 
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="DiscomatiX: Meetings"/>
+  <meta property="og:title" content="DiscoMatiX: Meetings"/>
   <meta property="og:type" content="article"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:site_name" content="DiscomatiX"/>
+  <meta property="og:site_name" content="DiscoMatiX"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="DiscomatiX: Meetings"/>
+  <meta property="twitter:title" content="DiscoMatiX: Meetings"/>
 
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
@@ -455,8 +455,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
 
   <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
-  <link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet"/>
-  <link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet"/>
   <script src="site_libs/headroom-0.9.4/headroom.min.js"></script>
   <script src="site_libs/autocomplete-0.37.1/autocomplete.min.js"></script>
   <script src="site_libs/fuse-6.4.1/fuse.min.js"></script>
@@ -2071,7 +2071,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
+  <script src="site_libs/header-attrs-2.19/header-attrs.js"></script>
   <script src="site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
   <link href="site_libs/tippy-6.2.7/tippy-light-border.css" rel="stylesheet" />
@@ -2099,10 +2099,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <header class="header header--fixed" role="banner">
 <nav class="distill-site-nav distill-site-header">
 <div class="nav-left">
-<a href="index.html" class="title">DiscomatiX</a>
+<a class="logo">
+<img src="logo/DiscoMatiX_dark_transparent.png" alt="Logo"/>
+</a>
+<a href="index.html" class="title">DiscoMatiX</a>
 </div>
 <div class="nav-right">
-<a href="index.html">Home</a>
 <a href="meetings.html">Meetings</a>
 <a href="team.html">Team</a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
@@ -2126,6 +2128,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
 <h3 id="october-18">October 18</h3>
 <p><strong>Chris Cummins</strong>, <strong><em>University of Edinburgh</em></strong></p>
+<p>Chris Cummins is a Reader in Linguistics and English Language at the University of Edinburgh. His research is mostly in experimental semantics and pragmatics, focusing on why speakers choose to use particular linguistic forms, and how hearers interpret this.</p>
+<p>In his ongoing work, he’s continuing to explore how we communicate about quantity, as well as how we make decisions based on our understanding of what a speaker has told us, for instance in high-stakes domains such as financial and medical interactions. He’s particularly interested in how we infer additional features of the situation, such as the speaker’s knowledge state and potentially their argumentative agenda, from the utterance, and how this feeds into decision-making.</p>
 <p><strong>Abstract</strong>
 Available soon.</p>
 <h3 id="november-15---tba">November 15 - TBA</h3>
