--- a/meetings.html
+++ b/meetings.html
@@ -455,8 +455,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
 
   <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
-  <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet"/>
-  <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet"/>
   <script src="site_libs/headroom-0.9.4/headroom.min.js"></script>
   <script src="site_libs/autocomplete-0.37.1/autocomplete.min.js"></script>
   <script src="site_libs/fuse-6.4.1/fuse.min.js"></script>
@@ -2071,7 +2071,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="site_libs/header-attrs-2.19/header-attrs.js"></script>
+  <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
   <script src="site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
   <link href="site_libs/tippy-6.2.7/tippy-light-border.css" rel="stylesheet" />
@@ -2132,7 +2132,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>In his ongoing work, he’s continuing to explore how we communicate about quantity, as well as how we make decisions based on our understanding of what a speaker has told us, for instance in high-stakes domains such as financial and medical interactions. He’s particularly interested in how we infer additional features of the situation, such as the speaker’s knowledge state and potentially their argumentative agenda, from the utterance, and how this feeds into decision-making.</p>
 <p><strong>Abstract</strong>
 Available soon.</p>
-<h3 id="november-15---tba">November 15 - TBA</h3>
+<h3 id="november-15">November 15</h3>
+<p><strong>Ingmar Brilmayer</strong>, <strong><em>University of Cologne</em></strong></p>
+<p><strong>Abstract</strong>
+Available soon.</p>
 <h3 id="december-6">December 6</h3>
 <p><strong>Vera Demberg</strong>, <strong><em>Saarland University</em></strong></p>
 <p>Vera Demberg is a Professor of Computer Science and Computational Linguistics at Saarland University.
