added timeslot and email

--- a/index.html
+++ b/index.html
@@ -2125,7 +2125,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 <div class="d-article">
 <h3 id="who">Who?</h3>
-<p>We are a group of (early career) researchers working on <strong>Disco</strong>urse and prag<strong>Mati</strong>cs using e<strong>X</strong>perimental approaches. Our group is specifically focused on the interface between theoretical and empirical approaches. Continue reading to learn more about what we mean by this.</p>
+<p>We are a group of (early career) researchers working on <strong>Disco</strong>urse and prag<strong>Mati</strong>cs using e<strong>X</strong>perimental approaches. Our group is specifically focused on the interface between theoretical and empirical approaches.</p>
 <h3 id="what">What?</h3>
 <p>We bring together interested researchers in the fields of discourse and pragmatics to exchange ideas and experiences. Through these encounters, we aim to:</p>
 <ul>
