--- a/meetings.html
+++ b/meetings.html
@@ -2124,19 +2124,20 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
 <div class="d-article">
-<p>We will kick off our interest group with an online mini-series this winter semester. You can find our upcoming and past meetings below.</p>
+<p>We will kick off our interest group with an online mini-series this winter semester. You can find our upcoming and past meetings below. To join these sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
-<h3 id="october-18">October 18</h3>
+<h3 id="october-18---1600-1650-cest">October 18 - 16:00-16:50 CEST</h3>
 <p><strong>Chris Cummins</strong>, <strong><em>University of Edinburgh</em></strong></p>
 <p>Chris Cummins is a Reader in Linguistics and English Language at the University of Edinburgh. His research is mostly in experimental semantics and pragmatics, focusing on why speakers choose to use particular linguistic forms, and how hearers interpret this.</p>
 <p>In his ongoing work, he’s continuing to explore how we communicate about quantity, as well as how we make decisions based on our understanding of what a speaker has told us, for instance in high-stakes domains such as financial and medical interactions. He’s particularly interested in how we infer additional features of the situation, such as the speaker’s knowledge state and potentially their argumentative agenda, from the utterance, and how this feeds into decision-making.</p>
 <p><strong>Abstract</strong>
 Available soon.</p>
-<h3 id="november-15">November 15</h3>
+<h3 id="november-15---1600-1650-cet">November 15 - 16:00-16:50 CET</h3>
 <p><strong>Ingmar Brilmayer</strong>, <strong><em>University of Cologne</em></strong></p>
+<p>Ingmar Brilmayer is a postdoctoral researcher at the University of Cologne’s Xlinc Lab on the project “Communication Electrified” (Volkswagen Stiftung). There he has built a lab which combines mobile EEG and eye-tracking recordings in naturalistic interactions. His research interests are in the neurobiological basis of language processing and in neuropsychological correlates of referential processes in natural settings, as well as individual differences and predictive processes that underpin language processing.</p>
 <p><strong>Abstract</strong>
 Available soon.</p>
-<h3 id="december-6">December 6</h3>
+<h3 id="december-6---1600-1650-cet">December 6 - 16:00-16:50 CET</h3>
 <p><strong>Vera Demberg</strong>, <strong><em>Saarland University</em></strong></p>
 <p>Vera Demberg is a Professor of Computer Science and Computational Linguistics at Saarland University.
 She has been working on discourse and pragmatics with her team in both the SFB1102 ‘Information Density and Linguistic Encoding’ as well as the ERC-funded ‘Individualized Interaction in Discourse’.
