--- a/team.html
+++ b/team.html
@@ -2126,6 +2126,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-article">
 <p>Our interest group was founded in 2023 by Clare Patterson, Marian Marchal, and Vinicius Macuch Silva.</p>
 <p><strong>Clare Patterson</strong></p>
+<p>I’m a postdoctoral researcher at the CRC Prominence in Language in Cologne, Germany. My research interests are in the processing of sentence and discourse-level phenomena related to coherence such as anaphora and discourse connectives. I’ve used offline and online experimental methods, including self-paced reading and eye-tracking, to investigate various aspects of anaphora resolution both in first-language users and in adult second-language learners. I’m also interested in how our findings can be modelled using Bayesian frameworks, how we can investigate other discourse-level phenomena using more naturalistic experimental paradigms, and how to combine these with corpus and modelling approaches.</p>
 <p><strong>Marian Marchal</strong></p>
 <p>I’m a PhD student at Saarland University in Vera Demberg’s lab. My work focuses on the role of relational and contextual cues in processing discourse relations, but I am interested in anything remotely related to this. In my research, I often combine various psycholinguistic tasks (e.g. self-paced reading, comprehension) to test my hypotheses. These hypotheses are often inspired by corpus research and cognitive models of language processing.</p>
 <p><strong>Vinicius Macuch Silva</strong></p>
