--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
 
   <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
-  <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet"/>
-  <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet"/>
+  <link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet"/>
   <script src="site_libs/headroom-0.9.4/headroom.min.js"></script>
   <script src="site_libs/autocomplete-0.37.1/autocomplete.min.js"></script>
   <script src="site_libs/fuse-6.4.1/fuse.min.js"></script>
@@ -2096,7 +2096,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+  <script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
   <script src="site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
   <link href="site_libs/tippy-6.2.7/tippy-light-border.css" rel="stylesheet" />
@@ -2160,7 +2160,7 @@ h1 {
 }
 </style>
 <div class="layout-chunk" data-layout="l-body">
-<p><img src="logo/DiscoMatiX_dark_transparent.png" width="250" style="display: block; margin: auto;" /></p>
+<p><img src="logo/DiscoMatix_dark_transparent.png" width="250" style="display: block; margin: auto;" /></p>
 </div>
 <h3 id="who">Who?</h3>
 <p>We are a group of (early career) researchers working on <strong>Disco</strong>urse and prag<strong>Mati</strong>cs using e<strong>X</strong>perimental approaches. Our group is specifically focused on the interface between theoretical and empirical approaches.</p>
