--- a/index.html
+++ b/index.html
@@ -2125,6 +2125,16 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
 <div class="d-article">
+<div class="d-contents d-contents-float">
+<nav class="l-text toc figcaption" id="TOC">
+<h3>Contents</h3>
+<ul>
+<li><a href="#who" id="toc-who">Who?</a></li>
+<li><a href="#what" id="toc-what">What?</a></li>
+<li><a href="#why" id="toc-why">Why?</a></li>
+</ul>
+</nav>
+</div>
 <style>
 body {
   text-align: justify}
@@ -2133,6 +2143,14 @@ h1 {
   text-align: center
 }
 </style>
+<div class="layout-chunk" data-layout="l-body">
+<style type="text/css">
+#TOC { 
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s;
+  }
+</style>
+</div>
 <div class="layout-chunk" data-layout="l-body">
 <p><img src="logo/DiscoMatiX_dark_transparent.png" width="250" style="display: block; margin: auto;" /></p>
 </div>
@@ -2170,7 +2188,7 @@ h1 {
 <div class="distill-site-nav distill-site-footer">
 <p>Contact us at <strong>discomatix</strong> [dot]
 <strong>group</strong> [at] gmail [dot] com</p>
-<p>Last modified: October 2023</p>
+<p>Last modified: December 2023</p>
 </div>
 <!--/radix_placeholder_navigation_after_body-->
 
