--- a/meetings.html
+++ b/meetings.html
@@ -2132,6 +2132,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <li><a href="#upcoming-meetings" id="toc-upcoming-meetings">Upcoming meetings</a>
 <ul>
 <li><a href="#february-6---winter-session" id="toc-february-6---winter-session">February 6 - Winter Session</a></li>
+<li><a href="#spring-series-2024" id="toc-spring-series-2024"><strong>Spring series 2024</strong></a></li>
 </ul></li>
 <li><a href="#past-meetings" id="toc-past-meetings">Past meetings</a></li>
 </ul>
@@ -2145,7 +2146,7 @@ h1 {
   text-align: center
 }
 </style>
-<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we will have a special Winter Session in February, followed by a Spring Series, starting in March. You can find our upcoming and past meetings below. To join these session, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
+<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we will have a special Winter Session in February, followed by a Spring Series, starting in April. You can find our upcoming and past meetings below. To join these sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
 <h3 id="february-6---winter-session">February 6 - Winter Session</h3>
 <p>On Tuesday February 6 (16:00-16:50 CET) we’ll have a special themed session on multimodality in discourse and pragmatics with 5-min flash talks by the speakers below.</p>
@@ -2159,6 +2160,10 @@ h1 {
 </p>
 <p><strong><a href="https://sites.google.com/view/schuyler-laparle/">Schuyler Laparle</a></strong>, <strong><em>Tilburg University</em></strong></p>
 <p><strong>The iconicity of abstract structure: Gesturing discourse relations</strong></p>
+<h3 id="spring-series-2024"><strong>Spring series 2024</strong></h3>
+<p>April 9 - <strong><a href="https://sites.google.com/view/nicolegotzner">Nicole Gotzner</a></strong>, <strong><em>Osnabrück University</em></strong></p>
+<p>May 14 - <strong>Panel discussion, more details soon</strong></p>
+<p>June 11 - <strong><a href="https://tscheffler.github.io/">Tatjana Scheffler</a></strong>, <strong><em>Ruhr-Universität Bochum</em></strong></p>
 <h2 id="past-meetings">Past meetings</h2>
 <details>
 <summary>
