--- a/meetings.html
+++ b/meetings.html
@@ -2131,7 +2131,6 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <ul>
 <li><a href="#upcoming-meetings" id="toc-upcoming-meetings">Upcoming meetings</a>
 <ul>
-<li><a href="#february-6---winter-session" id="toc-february-6---winter-session">February 6 - Winter Session</a></li>
 <li><a href="#spring-series-2024" id="toc-spring-series-2024"><strong>Spring series 2024</strong></a></li>
 </ul></li>
 <li><a href="#past-meetings" id="toc-past-meetings">Past meetings</a></li>
@@ -2146,10 +2145,20 @@ h1 {
   text-align: center
 }
 </style>
-<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we will have a special Winter Session in February, followed by a Spring series, starting in April. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
+<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter Session in February, and we are having a Spring series starting in April. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
-<h3 id="february-6---winter-session">February 6 - Winter Session</h3>
-<p>On Tuesday February 6 (16:00-16:50 CET) we’ll have a special themed session on multimodality in discourse and pragmatics with 5-min flash talks by the speakers below.</p>
+<h3 id="spring-series-2024"><strong>Spring series 2024</strong></h3>
+<p>April 9 - <strong><a href="https://sites.google.com/view/nicolegotzner">Nicole Gotzner</a></strong>, <strong><em>Osnabrück University</em></strong></p>
+<p><strong>Bringing Grice to the lab: How to do interactive experiments on pragmatics and communication</strong></p>
+<p>Since Grice’s monumental proposal, communication is construed as a cooperative enterprise involving a speaker and a hearer. Yet most experimental research in Cognitive Science is monadic and this is at odds with the fact that communication is a joint activity (Pickering and Garrod, 2021). Moreover, it presents us with an empirical gap: almost no fair empirical test of the Gricean model exists. I will discuss two strands of research that try to close this gap. (1) Work on implicature with interactive dialog experiments (e.g. Gotzner and Benz, 2018; Benz and Gotzner, 2021) and (2) ongoing research on referential communication about concepts with Kristina Kobrock and Charlotte Uhlemann. At the end of my talk, I will briefly discuss how multi-agent modeling tools can be used to tackle core questions about communication.</p>
+<p>May 14 - <strong>Panel discussion with <a href="https://sites.google.com/site/iranoveck">Ira Noveck</a></strong>, <strong><em>Centre National de la Recherche Scientifique</em></strong>, <strong><a href="https://sites.google.com/site/napoleonkatsos/home">Napoleon Katsos</a></strong>, <strong><em>University of Cambridge</em></strong>, <strong><a href="https://idsl1.phil-fak.uni-koeln.de/en/personen/professorenseiten/prof-dr-petra-b-schumacher">Petra Schumacher</a></strong>, <strong><em>University of Cologne</em></strong></p>
+<p>June 11 - <strong><a href="https://tscheffler.github.io/">Tatjana Scheffler</a></strong>, <strong><em>Ruhr-Universität Bochum</em></strong></p>
+<h2 id="past-meetings">Past meetings</h2>
+<details>
+<summary>
+<strong>February 6 - Winter Session</strong>
+</summary>
+<p>On February 6 we had a special themed session on multimodality in discourse and pragmatics with 5-min flash talks by the speakers below.</p>
 <p><strong><a href="https://www.mpi.nl/people/slonimska-anita">Anita Slonimska</a></strong>, <strong><em>Max Planck Institute of Psycholinguistics</em></strong></p>
 <p><strong>Rethinking communicative efficiency: Insights from sign languages</strong><br />
 <br />
@@ -2160,13 +2169,7 @@ h1 {
 </p>
 <p><strong><a href="https://sites.google.com/view/schuyler-laparle/">Schuyler Laparle</a></strong>, <strong><em>Tilburg University</em></strong></p>
 <p><strong>The iconicity of abstract structure: Gesturing discourse relations</strong></p>
-<h3 id="spring-series-2024"><strong>Spring series 2024</strong></h3>
-<p>April 9 - <strong><a href="https://sites.google.com/view/nicolegotzner">Nicole Gotzner</a></strong>, <strong><em>Osnabrück University</em></strong></p>
-<p><strong>Bringing Grice to the lab: How to do interactive experiments on pragmatics and communication</strong></p>
-<p>Since Grice’s monumental proposal, communication is construed as a cooperative enterprise involving a speaker and a hearer. Yet most experimental research in Cognitive Science is monadic and this is at odds with the fact that communication is a joint activity (Pickering and Garrod, 2021). Moreover, it presents us with an empirical gap: almost no fair empirical test of the Gricean model exists. I will discuss two strands of research that try to close this gap. (1) Work on implicature with interactive dialog experiments (e.g. Gotzner and Benz, 2018; Benz and Gotzner, 2021) and (2) ongoing research on referential communication about concepts with Kristina Kobrock and Charlotte Uhlemann. At the end of my talk, I will briefly discuss how multi-agent modeling tools can be used to tackle core questions about communication.</p>
-<p>May 14 - <strong>Panel discussion, more details soon</strong></p>
-<p>June 11 - <strong><a href="https://tscheffler.github.io/">Tatjana Scheffler</a></strong>, <strong><em>Ruhr-Universität Bochum</em></strong></p>
-<h2 id="past-meetings">Past meetings</h2>
+</details>
 <details>
 <summary>
 <strong>Autumn series 2023</strong>
@@ -2214,7 +2217,7 @@ In this talk I use this idea briefly to discuss three points: whether we’re al
 <div class="distill-site-nav distill-site-footer">
 <p>Contact us at <strong>discomatix</strong> [dot]
 <strong>group</strong> [at] gmail [dot] com</p>
-<p>Last modified: February 2024</p>
+<p>Last modified: April 2024</p>
 </div>
 <!--/radix_placeholder_navigation_after_body-->
 
