--- a/meetings.html
+++ b/meetings.html
@@ -2145,7 +2145,7 @@ h1 {
   text-align: center
 }
 </style>
-<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter Session in February, and we are having a Spring series starting in April. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
+<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter session in February, and we are having a Spring series starting in April. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
 <h3 id="spring-series-2024"><strong>Spring series 2024</strong></h3>
 <p>April 9 - <strong><a href="https://sites.google.com/view/nicolegotzner">Nicole Gotzner</a></strong>, <strong><em>Osnabrück University</em></strong></p>
@@ -2156,7 +2156,7 @@ h1 {
 <h2 id="past-meetings">Past meetings</h2>
 <details>
 <summary>
-<strong>February 6 - Winter Session</strong>
+<strong>Winter session 2024</strong>
 </summary>
 <p>On February 6 we had a special themed session on multimodality in discourse and pragmatics with 5-min flash talks by the speakers below.</p>
 <p><strong><a href="https://www.mpi.nl/people/slonimska-anita">Anita Slonimska</a></strong>, <strong><em>Max Planck Institute of Psycholinguistics</em></strong></p>
