--- a/meetings.html
+++ b/meetings.html
@@ -2148,6 +2148,7 @@ h1 {
 <p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter session in February, and we are having a Spring series starting in April. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
 <h3 id="spring-series-2024"><strong>Spring series 2024</strong></h3>
+<p><strong>All sessions take place at 16:00 CET</strong></p>
 <p>April 9 - <strong><a href="https://sites.google.com/view/nicolegotzner">Nicole Gotzner</a></strong>, <strong><em>Osnabrück University</em></strong></p>
 <p><strong>Bringing Grice to the lab: How to do interactive experiments on pragmatics and communication</strong></p>
 <p>Since Grice’s monumental proposal, communication is construed as a cooperative enterprise involving a speaker and a hearer. Yet most experimental research in Cognitive Science is monadic and this is at odds with the fact that communication is a joint activity (Pickering and Garrod, 2021). Moreover, it presents us with an empirical gap: almost no fair empirical test of the Gricean model exists. I will discuss two strands of research that try to close this gap. (1) Work on implicature with interactive dialog experiments (e.g. Gotzner and Benz, 2018; Benz and Gotzner, 2021) and (2) ongoing research on referential communication about concepts with Kristina Kobrock and Charlotte Uhlemann. At the end of my talk, I will briefly discuss how multi-agent modeling tools can be used to tackle core questions about communication.</p>
@@ -2169,6 +2170,7 @@ h1 {
 </p>
 <p><strong><a href="https://sites.google.com/view/schuyler-laparle/">Schuyler Laparle</a></strong>, <strong><em>Tilburg University</em></strong></p>
 <p><strong>The iconicity of abstract structure: Gesturing discourse relations</strong></p>
+<em>For a recording of this session, send us an email.</em>
 </details>
 <details>
 <summary>
