--- a/meetings.html
+++ b/meetings.html
@@ -2131,7 +2131,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <ul>
 <li><a href="#upcoming-meetings" id="toc-upcoming-meetings">Upcoming meetings</a>
 <ul>
-<li><a href="#spring-series-2024" id="toc-spring-series-2024"><strong>Spring series 2024</strong></a></li>
+<li><a href="#autumn-series-2024" id="toc-autumn-series-2024"><strong>Autumn series 2024</strong></a></li>
 </ul></li>
 <li><a href="#past-meetings" id="toc-past-meetings">Past meetings</a></li>
 </ul>
@@ -2145,20 +2145,25 @@ h1 {
   text-align: center
 }
 </style>
-<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter session in February, and we are having a Spring series starting in April. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
+<p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter session in February and a Spring series between April and June. Starting in October 2024 we are having an Autumn series. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
-<h3 id="spring-series-2024"><strong>Spring series 2024</strong></h3>
-<p><strong>All sessions take place at 16:00 CEST</strong></p>
-<p>June 11 - <strong><a href="https://tscheffler.github.io/">Tatjana Scheffler</a></strong>, <strong><em>Ruhr-Universität Bochum</em></strong></p>
-<p><strong>Experimental Approaches to the Semantics and Pragmatics of Emojis</strong></p>
-<p>Emojis are frequently used in digital communication: some estimates state that about every second chat message contains an emoji. This, together with the fact that they have replaced a range of other non-standard features of online writing, indicates that emojis fill a linguistic gap and carry important semantic and pragmatic information.
-Recently, linguists have started to address the specific semantic and pragmatic role of emojis not only theoretically and based on corpus data, but also experimentally. In the talk, I will present recent research we have carried out jointly with collaborators, investigating the meaning of different types of emojis using rating studies, but also self-paced reading and free text questions.</p>
-<p>In particular, I will report recent results on deriving semantic norms for face emojis (from four language communities) from human participants, and testing the subtle meaning differences between emojis that look visually similar. In this experiment, we compared emoji pairs with a visual difference that either does or does not correspond to a difference in human facial expressions according to an adaptation of the Facial Action Coding System. Our results show that the small differences between emoji pairs are meaningful in all pairs whether or not they correspond to human facial differences. This supports a lexicalist approach to emoji semantics, which treats face emojis as conventionalized signals rather than mere pictures of faces.</p>
+<h3 id="autumn-series-2024"><strong>Autumn series 2024</strong></h3>
+<p><strong>All sessions take place at 16:00 CET</strong></p>
 <h2 id="past-meetings">Past meetings</h2>
 <details>
 <summary>
 <strong>Spring series 2024</strong>
 </summary>
+<details>
+<summary>
+June 11 - <strong><a href="https://tscheffler.github.io/">Tatjana Scheffler</a></strong>, <strong><em>Ruhr-Universität Bochum</em></strong>
+</summary>
+<p><strong>Experimental Approaches to the Semantics and Pragmatics of Emojis</strong></p>
+<p>Emojis are frequently used in digital communication: some estimates state that about every second chat message contains an emoji. This, together with the fact that they have replaced a range of other non-standard features of online writing, indicates that emojis fill a linguistic gap and carry important semantic and pragmatic information.
+Recently, linguists have started to address the specific semantic and pragmatic role of emojis not only theoretically and based on corpus data, but also experimentally. In the talk, I will present recent research we have carried out jointly with collaborators, investigating the meaning of different types of emojis using rating studies, but also self-paced reading and free text questions.</p>
+<p>In particular, I will report recent results on deriving semantic norms for face emojis (from four language communities) from human participants, and testing the subtle meaning differences between emojis that look visually similar. In this experiment, we compared emoji pairs with a visual difference that either does or does not correspond to a difference in human facial expressions according to an adaptation of the Facial Action Coding System. Our results show that the small differences between emoji pairs are meaningful in all pairs whether or not they correspond to human facial differences. This supports a lexicalist approach to emoji semantics, which treats face emojis as conventionalized signals rather than mere pictures of faces.</p>
+<em>For a recording of this talk, send us an email.</em>
+</details>
 <details>
 <summary>
 May 14 - <strong>Panel discussion with <a href="https://sites.google.com/site/iranoveck">Ira Noveck</a></strong>, <strong><em>Centre National de la Recherche Scientifique</em></strong>, <strong><a href="https://sites.google.com/site/napoleonkatsos/home">Napoleon Katsos</a></strong>, <strong><em>University of Cambridge</em></strong>, <strong><a href="https://idsl1.phil-fak.uni-koeln.de/en/personen/professorenseiten/prof-dr-petra-b-schumacher">Petra Schumacher</a></strong>, <strong><em>University of Cologne</em></strong>
@@ -2240,7 +2245,7 @@ In this talk I use this idea briefly to discuss three points: whether we’re al
 <div class="distill-site-nav distill-site-footer">
 <p>Contact us at <strong>discomatix</strong> [dot]
 <strong>group</strong> [at] gmail [dot] com</p>
-<p>Last modified: May 2024</p>
+<p>Last modified: July 2024</p>
 </div>
 <!--/radix_placeholder_navigation_after_body-->
 
