--- a/meetings.html
+++ b/meetings.html
@@ -2148,7 +2148,10 @@ h1 {
 <p>We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter session in February and a Spring series between April and June. Starting in October 2024 we are having an Autumn series. You can find our upcoming and past meetings below. To join our sessions, please send an email to ‘discomatix [dot] group [at] gmail [dot] com’.</p>
 <h2 id="upcoming-meetings">Upcoming meetings</h2>
 <h3 id="autumn-series-2024"><strong>Autumn series 2024</strong></h3>
-<p><strong>All sessions take place at 16:00 CET</strong></p>
+<p>October 15 - <strong><a href="https://www.birmingham.ac.uk/staff/profiles/elal/carrol-gareth">Gareth Carrol</a></strong> - TBA</p>
+<p>November 19 - <strong><a href="https://www.mpi.nl/people/rubio-fernandez-paula">Paula Rubio-Fernández</a></strong> - TBA</p>
+<p>December 10 - <strong><a href="">Irene Mognon</a></strong> and <strong><a href="https://www.let.rug.nl/~hendriks/personal/index.html">Petra Hendriks</a></strong> - TBA</p>
+<p><strong>All sessions take place at 16:00 CE(S)T</strong></p>
 <h2 id="past-meetings">Past meetings</h2>
 <details>
 <summary>
@@ -2245,7 +2248,7 @@ In this talk I use this idea briefly to discuss three points: whether we’re al
 <div class="distill-site-nav distill-site-footer">
 <p>Contact us at <strong>discomatix</strong> [dot]
 <strong>group</strong> [at] gmail [dot] com</p>
-<p>Last modified: July 2024</p>
+<p>Last modified: September 2024</p>
 </div>
 <!--/radix_placeholder_navigation_after_body-->
 
