--- a/meetings.html
+++ b/meetings.html
@@ -2150,7 +2150,7 @@ h1 {
 <h3 id="autumn-series-2024"><strong>Autumn series 2024</strong></h3>
 <p>October 15 - <strong><a href="https://www.birmingham.ac.uk/staff/profiles/elal/carrol-gareth">Gareth Carrol</a></strong> - TBA</p>
 <p>November 19 - <strong><a href="https://www.mpi.nl/people/rubio-fernandez-paula">Paula Rubio-Fernández</a></strong> - TBA</p>
-<p>December 10 - <strong><a href="">Irene Mognon</a></strong> and <strong><a href="https://www.let.rug.nl/~hendriks/personal/index.html">Petra Hendriks</a></strong> - TBA</p>
+<p>December 10 - <strong><a href="https://irenemognon.eu/">Irene Mognon</a></strong> and <strong><a href="https://www.let.rug.nl/~hendriks/personal/index.html">Petra Hendriks</a></strong> - TBA</p>
 <p><strong>All sessions take place at 16:00 CE(S)T</strong></p>
 <h2 id="past-meetings">Past meetings</h2>
 <details>
